syntax = "proto3";

option csharp_namespace = "Reservations.GRPC.Protos";

service UsersReservationProtoService {
	rpc GetReservation (GetReservationRequest) returns (GetReservationResponse);
}

message GetReservationRequest {
	string UserId = 1;
}

message GetReservationResponse {
	message Reservation {
        string Id = 1;
        string UserId = 2;
        string HotelId = 3;
        string RoomId = 4;
        string BookingDateTime = 5;
        string StartDateTime = 6;
        string EndDateTime = 7;
        string Status = 8;
    }

    repeated Reservation Reservations = 1;
}